--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -67,6 +67,30 @@
             </div>
         {% endfor %}
         </div>
+        
+        
+        <div class="block-executados">
+		    <h3>Procedimentos em execução</h3>
+		    <div>
+		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:25</small> MyProcedure <small>(125 arquivos)</small></div>
+		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/exclamation.png" /> <small>20/09/2010 10:15</small> TestProcedure <small>(32 arquivos)</small></div>
+		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>18/09/2010 12:26</small> YourProcedure <small>(125 arquivos)</small></div>
+		    </div>
+		    <div class="clear"></div>
+		    <p></p>
+		</div>
+		
+		
+		<div class="block-executados">
+		    <h3>Últimos procedimentos executados</h3>
+		    <div>
+		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>19/09/2010 08:30</small> MyProcedure <small>(16 arquivos)</small></div>
+		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>19/09/2010 06:00</small> TestProcedure <small>(20 arquivos)</small></div>
+		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>17/09/2010 12:26</small> YourProcedure <small>(1 arquivo)</small></div>
+		    </div>
+		    <div class="clear"></div>
+		    <p></p>
+		</div>
     
     </div>
     
