--- a/nimbus/storages/templates/storages_view.html
+++ b/nimbus/storages/templates/storages_view.html
@@ -79,6 +79,27 @@
                 <div class="clear"></div>
             </div>
         </div>
+        
+        <div class="block-executados">
+            <h3>Espaço em disco</h3>
+            <div class="" style="width: 200px; border: 1px solid green" title="72% de ocupação.">
+                <div class="" style="width: 72%; background: green; height: 20px"></div>
+            </div>
+            <small>72% de ocupação (180 GB / 250 GB)</small>
+            <div class="clear"></div>
+		    <p></p>
+        </div>
+        
+        <div class="block-executados">
+		    <h3>Backups em execução</h3>
+		    <div>
+		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:25</small> Servidor Web <small>(13 arquivos)</small></div>
+		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:15</small> Sala A - Comp 1 <small>(5 arquivos)</small></div>
+		    </div>
+		    <div class="clear"></div>
+		</div>
+        
+        <p></p>
     </div>
     
     <div class="bendl"></div>
