--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -38,7 +38,7 @@
                 <div class="left" style="float: left; width: 250px">
                     <div class="title">
                         <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
-                        <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{comp.name}}</h3>
+                        <h3 class="name" style="margin: 0 0 -5px 0; padding: 0"><a href="/computers/{{ comp.id }}/view">{{comp.name}}</a></h3>
                         <small class="ip">{{comp.address}} - {{comp.operation_system|title}} - {% for g in comp.groups.all %}{{g.name}}{% endfor %}</small>
                     </div>
                     <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{comp.description}}</p>
