--- a/nimbus/computers/templates/computers_view.html
+++ b/nimbus/computers/templates/computers_view.html
@@ -73,6 +73,27 @@
                 <div class="clear"></div>
             </div>
         </div>
+        
+        <div class="block-executados">
+            <h3>Ocupação do backup</h3>
+            <div class="" style="width: 200px; border: 1px solid green" title="72% de ocupação.">
+                <div class="" style="width: 72%; background: green; height: 20px"></div>
+            </div>
+            <small>72% de ocupação</small>
+            <div class="clear"></div>
+		    <p></p>
+        </div>
+        
+        <div class="block-executados">
+		    <h3>Backups em execução</h3>
+		    <div>
+		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:25</small> Servidor Web <small>(13 arquivos)</small></div>
+		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:15</small> Sala A - Comp 1 <small>(5 arquivos)</small></div>
+		    </div>
+		    <div class="clear"></div>
+		    <p></p>
+		</div>
+        
         <div class="block-executados">
 	        <div style="float: left; width: 49%">
     		    <h3>Últimos backups executados</h3>
