--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -90,6 +90,7 @@
                             <li><a href="/computers/list">Listar computador</a></li>
                             <li><a href="/computers/add">Adicionar computador</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
+                            <li><a href="/offsite/detail">Offsite</a></li>
                             <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
                             <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
                             <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
@@ -123,6 +124,7 @@
                             <li><a href="/users/password_change">Alterar Senha</a></li>
                             <li><a href="/network/config">Configuração de Rede</a></li>
                             <li><a href="/timezone/config">Configuração de Hora</a></li>
+                            <li><a href="/recovery/start">Recuperação do sistema</a></li>
                         </ul>
 					</li>
 					
