--- a/nimbus/recovery/templates/recovery_start.html
+++ b/nimbus/recovery/templates/recovery_start.html
@@ -19,7 +19,7 @@
         <p> Atenção, é importante que o nome da instância atual seja igual a anteriormente instalada na máquina para que os arquivos pertencentes a esta máquina possam ser identificados.</p>
         
         <form action="/recovery/select_source" method="get">
-            <button type="submit"><span>Prosseguir</span></button>
+            <input type="submit" class="submit mid" value="Prosseguir" />
         </form>
     
         <p></p>
