Colocando o nome do fileset como campo.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -431,15 +431,16 @@
                             });
                         </script>
 
+                        <p>
+                            <label for="fileset_name">Nome do conjunto de arquivos:</label><br/>
+                            <input type="text" name="fileset_name" id="fileset_name" class="text mid" />
+                        </p>
+
                         <!-- <a href="#" id="update_tree">atualizar arvore</a> -->
                         <ul class="tree"><li class="directory first"><span><a href="#" path="/">Arquivos</a></span></li></ul>
                         
             		    
             		    {% if 0 %}
-                        <p>
-                            <label for="fileset_name">Nome do conjunto de arquivos:</label><br/>
-                            <input type="text" name="fileset_name" id="fileset_name" class="text small" />
-                        </p>
                         <p>
                             <label for="fileset_name">Caminhos para backup:</label><br/>
                             <ol class="filepaths">
