Resolvidos: Remover botao desativar na parte do storage, destacar arvore de arquivos na restauracao, busca de arquivos no restore. Em andamento: Interface para disaster recovery.

--- a/nimbus/recovery/templates/recovery_confirm_storage.html
+++ b/nimbus/recovery/templates/recovery_confirm_storage.html
@@ -16,10 +16,11 @@
         
         <p>Dispositivo selecionado com sucesso. Por favor, clique em continuar.</p>
 
-        <form action="/recovery/recover_dabatases/" method="post">
+        <form action="/recovery/recover_databases/" method="post">
             <input type="hidden" name="localsource" value="{{ localsource }}"/>
             <input type="hidden" name="device" value="{{ device }}"/>
-            <button type="submit"><span>Ok</span></button>
+            
+            <input type="submit" class="submit mid" value="Continuar" />
         </form>
         
         <p></p>
