--- a/nimbus/recovery/templates/recovery_select_storage.html
+++ b/nimbus/recovery/templates/recovery_select_storage.html
@@ -27,7 +27,8 @@
             {% if devices %}
             <br />
             <input type="hidden" name="localsource" value="True"/>
-            <button type="submit"><span>Prosseguir</span></button>
+            
+            <input type="submit" class="submit mid" value="Prosseguir" />
             {%endif%}
         </form>
     
