--- a/nimbus/restore/templates/restore_list.html
+++ b/nimbus/restore/templates/restore_list.html
@@ -210,13 +210,72 @@
 
             <div class="restore_step_3" style="display: none">
                 <h2 class="titulo_step">3. Arquivos para restauração</h2>
-
+                
+                <script type="text/javascript" charset="utf-8">
+                    $(document).ready(function(){
+                        
+                        // $('#pattern')
+                    });
+                </script>
+                
                 <p>
-    				<label>Buscar arquivo:</label> <input type="text" class="text small" /> <input type="submit" class="submit small" value="Buscar" />
+    				<label>Buscar arquivo:</label>
+    				<input type="text" name="pattern" id="pattern" class="text small" />
+    				<input type="button" class="submit small" id="buscar_arquivos" value="Buscar" />
     			</p>
 
                 <script type="text/javascript" charset="utf-8">
                     $(document).ready(function(){
+
+                        function mount_tree(data, root_path) {
+                            root = $("*[path="+root_path+"]");
+                            root.addClass('directory_open');
+                            var ul = $("<ul>").addClass("open").hide();
+                            ul.insertAfter($("*[path="+root_path+"]"));
+                            for (var item in data) {
+                                path = data[item];
+                                root_path_re = new RegExp("^" + root_path, "g");
+                                path_name = path.replace(root_path_re, '');
+
+                                var input = $("<input>").attr("type", "checkbox").attr("name", "path").val(path);
+                                
+                                // If is a directory.
+                                if (path.match("/$") == "/" || path.match("\\$") == "\\") {
+                                    attr_class = "directory";
+                                    mime_class = "folder";
+                                    var inner = $("<a>").attr("href", "#").attr("path", path).text(path_name);
+                                } else {
+                                    attr_class = "file";
+                                    if (path_name.split('.').length > 1) {
+                                        mime_class = "ext_" + $(path_name.split('.')).eq(-1)[0].toLowerCase();
+                                    } else {
+                                        mime_class = "";
+                                    }
+                                    
+                                    var inner = $("<span>").html(path_name);
+                                }
+
+                                var file = $("<span>").html(inner);
+
+                                input.change(function(){
+                                    checked = $(this).attr("checked") && "checked" || "";
+                                    $(this).parent().find('input').attr("checked", checked);
+                                });
+                                input.prependTo(file);
+
+                                var li = $("<li>").addClass(attr_class).addClass(mime_class);
+                                file.appendTo(li);
+                                li.appendTo(ul);
+                            }
+                            ul.slideDown();
+                            $(".tree a").unbind("click").click(function()
+                            {
+                                update_tree($(this).attr("path"));
+                                return false;
+                            });
+                            
+                            link.find(".wait").remove();
+                        }
 
                         function update_tree(root_path) {
                             get_tree_path = "/restore/get_tree/";
@@ -242,57 +301,12 @@
                                 return false;
                             }
 
-                            $.post(get_tree_path, {job_id: job_id, path: root_path}, function(data)
-                            {
-                                root = $("*[path="+root_path+"]");
-                                root.addClass('directory_open');
-                                var ul = $("<ul>").addClass("open").hide();
-                                ul.insertAfter($("*[path="+root_path+"]"));
-                                for (var item in data) {
-                                    path = data[item];
-                                    root_path_re = new RegExp("^" + root_path, "g");
-                                    path_name = path.replace(root_path_re, '');
-
-                                    var input = $("<input>").attr("type", "checkbox").attr("name", "path").val(path);
-                                    
-                                    // If is a directory.
-                                    if (path.match("/$") == "/" || path.match("\\$") == "\\") {
-                                        attr_class = "directory";
-                                        mime_class = "folder";
-                                        var inner = $("<a>").attr("href", "#").attr("path", path).text(path_name);
-                                    } else {
-                                        attr_class = "file";
-                                        if (path_name.split('.').length > 1) {
-                                            mime_class = "ext_" + $(path_name.split('.')).eq(-1)[0].toLowerCase();
-                                        } else {
-                                            mime_class = "";
-                                        }
-                                        
-                                        var inner = $("<span>").html(path_name);
-                                    }
-
-                                    var file = $("<span>").html(inner);
-
-                                    input.change(function(){
-                                        checked = $(this).attr("checked") && "checked" || "";
-                                        $(this).parent().find('input').attr("checked", checked);
-                                    });
-                                    input.prependTo(file);
-
-                                    var li = $("<li>").addClass(attr_class).addClass(mime_class);
-                                    file.appendTo(li);
-                                    li.appendTo(ul);
-                                }
-                                ul.slideDown();
-                                $(".tree a").unbind("click").click(function()
-                                {
-                                    update_tree($(this).attr("path"));
-                                    return false;
-                                });
-                                
-                                link.find(".wait").remove();
-                                // console.log(data);
-                            }, "json");
+                            $.post(get_tree_path,
+                                   {job_id: job_id, path: root_path},
+                                   function(data) {
+                                       mount_tree(data, root_path);
+                                   },
+                                   "json");
                         }
 
                         $('#update_tree').click(function()
@@ -305,6 +319,21 @@
                         $(".tree a").click(function()
                         {
                             update_tree($(this).attr("path"));
+                            return false;
+                        });
+                        
+                        $('#buscar_arquivos').click(function(){
+                            job_id = $('#jobs_list').val();
+                            pattern = $('#pattern').val();
+                            root_path = '/';
+                            $('.tree .directory.first ul').remove().removeClass("open");
+                            
+                            $.post('{% url nimbus.restore.views.get_tree_search_file %}',
+                                   {job_id: job_id, pattern: pattern},
+                                   function(data) {
+                                       mount_tree(data, root_path)
+                                   },
+                                   "json");
                             return false;
                         });
                     });
