--- a/nimbus/recovery/templates/recovery_list_downloads.html
+++ b/nimbus/recovery/templates/recovery_list_downloads.html
@@ -17,7 +17,7 @@
         <p><b>Atenção, quando todos os downloads tiverem concluído aperte no botão "Concluir".</b></p>
 
         <form action="/recovery/finish/" method="get">
-            <button type="submit"><span>Concluir</span></button>
+            <input type="submit" value="Concluir" class="submit mid" />
         </form>
         
         <p></p>
