--- a/nimbus/recovery/templates/recovery_recover_volumes.html
+++ b/nimbus/recovery/templates/recovery_recover_volumes.html
@@ -14,11 +14,11 @@
 
     <div class="block_content">
         
-        <p>O sistema de recuperação irá realizar o download de todos os seus dados armazenados. Esta operação deve levar vários minutos ou horas. Para prosseguir clique no botão OK e aguarde.</p>
+        <h1>O sistema de recuperação irá realizar o download de todos os seus dados armazenados.</h1>
+        <p>Esta operação deve levar vários minutos ou horas. Clique no botão prosseguir e aguarde.</p>
 
         <form action="/recovery/recover_volumes/" method="post">
-            <br />
-            <button type="submit"><span>Ok</span></button>
+            <input type="submit" class="submit mid" value="Prosseguir" />
         </form>
         
         <p></p>
