--- a/nimbus/recovery/templates/recovery_finish.html
+++ b/nimbus/recovery/templates/recovery_finish.html
@@ -13,11 +13,10 @@
 	</div>		<!-- .block_head ends -->
 
     <div class="block_content">
-        
-        <p>Parabéns, seu servidor de backup foi recuperado com sucesso.</p>
+        <h1>Parabéns, seu servidor de backup foi recuperado com sucesso.</h1>
 
         <form action="/" method="get">
-            <button type="submit"><span>Ok</span></button>
+            <input type="submit" value="Página inicial" class="submit mid" />
         </form>
         
         <p></p>
