Separando o menu do offsite.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -90,27 +90,23 @@
                             <li><a href="/computers/list">Listar computador</a></li>
                             <li><a href="/computers/add">Adicionar computador</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
-                            <li><a href="/offsite/detail">Offsite</a></li>
-                            <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
-                            <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
-                            <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
                             <li><a href="/storages/list">Listar Armazenamento</a></li>
                             <li><a href="/storages/add">Adicionar Armazenamento</a></li>                            
                         </ul>
 					</li>
-                    <!-- <li><a href="#">Computador</a>
-                        <ul>
-                            <li><a href="/computers/list">Listar</a></li>
-                            <li><a href="/computers/add">Adicionar</a></li>
-                            <li><a href="/backup/add">Adicionar Backup</a></li>
-                            <li><a href="/procedures/list">Procedimentos</a></li>
-                        </ul>
-                    </li> -->
 					<li><a href="#">Restaurar</a>
 					    <ul>
                             <li><a href="/restore/view/">Executar restauração</a></li>
                         </ul>
 				    </li>
+				    <li class="active"><a href="#">Offsite</a>
+					    <ul>
+    					    <li><a href="/offsite/detail">Detalhes do offsite</a></li>
+                            <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
+                            <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
+                            <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
+                        </ul>
+                    </li>
 					<li><a href="#">Ferramentas</a>
 					    <ul>
                             <li><a href="/system/network_tool/ping/">Ping</a></li>
