--- a/nimbus/computers/templates/computers_list.html
+++ b/nimbus/computers/templates/computers_list.html
@@ -76,9 +76,9 @@
                                 <div class="fileset_detail" style="display: none">
                                     <br/>
                                     Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
-                                    Perfil de configuração: <strong>{{proc.profile.name}}</strong><br/>
+                                    Perfil de configuração: <strong>{{proc.profile.name}}</strong> <small>(<a href="{% url nimbus.procedures.views.profile_edit object_id=proc.profile.id %}">editar</a>)</small><br/>
                                     Local de armazenamento: <strong><a href="/storages/{{proc.profile.storage.id}}/view"><span title="Endereço: {{proc.profile.storage.address}} - {{proc.profile.storage.description|slice:":25"}}...">{{proc.profile.storage.name}}</span></a></strong><br/>
-                                    Agendamento: <strong>{{proc.profile.schedule}}</strong><br/>
+                                    Agendamento: <strong>{{proc.profile.schedule}}</strong> <small>(<a href="{% url nimbus.schedules.views.edit object_id=proc.profile.schedule.id %}">editar</a>)</small><br/>
                                     Arquivos: <small>(<a href="{% url nimbus.filesets.views.edit object_id=proc.profile.fileset.id %}">editar</a>)</small>
                                     <ul>
                                         {% for file in proc.profile.fileset.files.all %}
