--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -16,8 +16,6 @@
 		@import url("/media/lib/css/date_input.css");
 		@import url("/media/js/iphone-style-checkboxes/style.css");
 		@import url("/media/js/progressbar/jquery.ui.all.css");
-		
-		
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
@@ -102,6 +100,7 @@
 				    <li class="active"><a href="#">Offsite</a>
 					    <ul>
     					    <li><a href="/offsite/detail">Detalhes do offsite</a></li>
+    					    <li><a href="/offsite/edit">Editar configurações</a></li>
                             <li><a href="/offsite/list_uploadrequest">Uploads ativos</a></li>
                             <li><a href="/offsite/list_downloadrequest">Downloads ativos</a></li>
                             <li><a href="/procedures/list_offsite">Procedimentos do offsite</a></li>
