--- a/nimbus/base/templates/base_wizard.html
+++ b/nimbus/base/templates/base_wizard.html
@@ -14,6 +14,8 @@
 		@import url("/media/lib/css/facebox.css");
 		@import url("/media/lib/css/visualize.css");
 		@import url("/media/lib/css/date_input.css");
+		@import url("/media/js/iphone-style-checkboxes/style.css");
+		@import url("/media/js/progressbar/jquery.ui.all.css");
     </style>
 	
 	<!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=7" /><![endif]-->
@@ -31,6 +33,22 @@
 	<script type="text/javascript" src="/media/lib/js/ajaxupload.js"></script>
 	<script type="text/javascript" src="/media/lib/js/jquery.pngfix.js"></script>
 	<script type="text/javascript" src="/media/lib/js/custom.js"></script>
+	<script type="text/javascript" src="/media/js/iphone-style-checkboxes/jquery/iphone-style-checkboxes.js"></script>
+	<script src="/media/js/jquery.sparkline.min.js" type="text/javascript"></script>
+	<script src="/media/js/progressbar/jquery.ui.core.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="/media/js/progressbar/jquery.ui.widget.min.js" type="text/javascript" charset="utf-8"></script>	
+	<script src="/media/js/progressbar/jquery.ui.progressbar.min.js" type="text/javascript" charset="utf-8"></script>
+
+    <script type="text/javascript" charset="utf-8">
+        $(document).ready( function() {
+            $('input:checkbox:not(#schedule input:checkbox)').not('').iphoneStyle({ checkedLabel: 'Sim', uncheckedLabel: 'Não' });
+
+            $(".iPhoneCheckContainer").css("width", "85px");
+            $(".sparklines").sparkline('html', {width: "300", height: "150px" })
+            
+            
+        });
+	</script>
 
     {% block headtags %}{% endblock %}
 
