--- a/nimbus/offsite/templates/detail.html
+++ b/nimbus/offsite/templates/detail.html
@@ -11,29 +11,34 @@
 
     <div class="block_content">
 
-        <p><a href="/offsite/list_uploadrequest">Visualizar uploads ativos</a> • <a href="/offsite/list_downloadrequest">Visualizar downloads ativos</a></p>
+        {% if offsite.active %}
+            <p><a href="/offsite/list_uploadrequest">Visualizar uploads ativos</a> • <a href="/offsite/list_downloadrequest">Visualizar downloads ativos</a></p>
 
-        <div class="block-executados">
-            <h3>Ocupação do offsite</h3>
-            <div class="" style="width: 200px; border: 1px solid green" title="72% de ocupação.">
-                <div class="" style="width: 72%; background: green; height: 20px"></div>
+            <div class="block-executados">
+                <h3>Ocupação do offsite</h3>
+                <div class="" style="width: 200px; border: 1px solid green" title="72% de ocupação.">
+                    <div class="" style="width: 72%; background: green; height: 20px"></div>
+                </div>
+                <small>72% de ocupação</small>
+                <div class="clear"></div>
+    		    <p></p>
             </div>
-            <small>72% de ocupação</small>
+        
+            <div class="block-executados">
+    		    <h3>Transferências em execução</h3>
+    		    <div>
+    		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:25</small> Servidor Web <small>(20 MB)</small></div>
+    		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:15</small> Sala A - Comp 1 <small>(3 MB)</small></div>
+    		    </div>
+    		    <div class="clear"></div>
+    		    <p></p>
+    		</div>
+        
             <div class="clear"></div>
-		    <p></p>
-        </div>
-        
-        <div class="block-executados">
-		    <h3>Transferências em execução</h3>
-		    <div>
-		        <div style="padding: 5px; background: #EEE"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:25</small> Servidor Web <small>(20 MB)</small></div>
-		        <div style="padding: 5px;"><img style="vertical-align: middle" src="/media/icons/tick_circle.png" /> <small>20/09/2010 10:15</small> Sala A - Comp 1 <small>(3 MB)</small></div>
-		    </div>
-		    <div class="clear"></div>
-		    <p></p>
-		</div>
-        
-        <div class="clear"></div>
+        {% else %}
+            <h1>Offsite inativo</h1>
+            <p>Antes de usar o offsite <a href="{% url nimbus.offsite.views.edit %}">você deve ativá-lo</a>.</p>
+        {% endif %}
     </div>
 
     <div class="bendl"></div>
