--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -78,6 +78,7 @@
 				<div class="hdrl"></div>
 				<div class="hdrr"></div>
 				
+				<div class="ico_nimbus"><img src="/media/lib/images/ico_nimbus.png" /></div>
 				<h1><a href="#">Nimbus</a></h1>
 				
 				<ul id="nav">
@@ -180,7 +181,7 @@
 
 			<div id="footer">
 
-				<p class="left"><a href="http://nimbus.com">Nimbus</a> Professional Backup - Um produto <a href="http://veezor.com">Veezor® Network Intelligence</a></p>
+				<p class="left"><a href="http://nimbus.com">Nimbus</a> Professional Backup - Um produto <a href="http://veezor.com"><img src="/media/lib/images/logo_veezor.gif" style="vertical-align: middle" alt="Veezor® Network Intelligence" /></a></p>
 				<p class="right">Nimbus v1.0</p>
 
 			</div>
