Conclui a copia de seguranca.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -112,7 +112,8 @@
                             <li><a href="/system/network_tool/ping/">Ping</a></li>
                             <li><a href="/system/network_tool/traceroute/">Traceroute</a></li>
                             <li><a href="/system/network_tool/nslookup/">NSLookup</a></li>
-                            <li><a href="/system/stat/">Sistema</a></li>                            
+                            <li><a href="/system/stat/">Estado do sistema</a></li>
+                            <li><a href="/system/security_copy/">Cópia de segurança</a></li>
                         </ul>
 					</li>
 					<li><a href="#">Configurações</a>
