--- a/nimbus/offsite/templates/list_downuploadrequest.html
+++ b/nimbus/offsite/templates/list_downuploadrequest.html
@@ -85,7 +85,7 @@
 	<div class="block_head">
 		<div class="bheadl"></div>
 		<div class="bheadr"></div>
-		<h2>Downloads ativos</h2>
+		<h2>{{ title }}</h2>
 		<div class="right">
             A lista será atualizada em <span class="tempo_restante">10</span> segundos. <small>(<a href="#" class="atualizar_agora">atualizar agora</a>)</small>
 		</div>
