--- a/nimbus/offsite/templates/select_storage.html
+++ b/nimbus/offsite/templates/select_storage.html
@@ -26,7 +26,7 @@
             {% endfor %}
 
             {% if devices %}
-                <p><input type="submit" class="submit" value="Prosseguir" /></p>
+                <p><input type="submit" class="submit mid" value="Prosseguir" /></p>
             {%endif%}
         </form>
         </div>
