Unificando o arquivo js da arvore e usando ele para o restore e backup.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -117,7 +117,7 @@
                             <li><a href="/recovery/start">Recuperação do sistema</a></li>
                         </ul>
 					</li>
-					<li><a href="#">Configurações</a>
+					<li class="nobg"><a href="#">Configurações</a>
                         <ul>
                             <li><a href="/users/password_change">Alterar Senha</a></li>
                             <li><a href="/network/config">Configuração de Rede</a></li>
