--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -1,14 +1,30 @@
 {% extends "base.html" %}
 
 {% block headtags %}
+<script type="text/javascript" charset="utf-8" src="/media/lib/js/tree_plugin.js"></script>
 <script type="text/javascript" charset="utf-8">
     $(document).ready(function(){
         $('.toggle').click(function(){
             var target = $(this).attr('ref');
             $(this).parent().parent().find('.' + target).slideToggle();
         });
+        
+        get_tree_path = "/backup/get_tree/";
+        
+        $('#update_tree').click(function()
+        {
+            update_tree('/', get_tree_path);
+            return false;
+        });
+
+        $(".tree a").click(function()
+        {
+            update_tree($(this).attr("path"), get_tree_path);
+            return false;
+        });
     });
 </script>
+
 {% endblock %}
 
 {% block page %}
@@ -336,101 +352,6 @@
             			<h2>Criar novo conjunto de arquivos</h2>
             		</div>		<!-- .block_head ends -->
             		<div class="block_content">
-            		    <script type="text/javascript" charset="utf-8">
-                            $(document).ready(function(){
-
-                                function update_tree(root_path) {
-                                    get_tree_path = "/backup/get_tree/";
-                                    computer_id = $('#computer_id').val();
-
-                                    link = $("*[path="+root_path+"]");
-                                    link.append($("<div class='wait'>"));
-                                    wrapper = link.parent();
-
-                                    if (wrapper.find('ul').length) {
-                                        var ul = wrapper.find('>ul');
-                                        if (ul.hasClass('open')) {
-                                            ul.removeClass('open').addClass('closed');
-                                            link.removeClass('directory_open').addClass('directory_closed');
-                                            wrapper.find('ul').slideUp();
-                                        } else if (ul.hasClass('closed')) {
-                                            ul.removeClass('closed').addClass('open');
-                                            link.removeClass('directory_closed').addClass('directory_open');
-                                            wrapper.find('ul').hide();
-                                            wrapper.find('>ul').slideDown();
-                                        }
-                                        link.find(".wait").remove();
-                                        return false;
-                                    }
-
-                                    $.post(get_tree_path, {computer_id: computer_id, path: root_path}, function(data)
-                                    {
-                                        root = $("*[path="+root_path+"]");
-                                        root.addClass('directory_open');
-                                        var ul = $("<ul>").addClass("open").hide();
-                                        ul.insertAfter($("*[path="+root_path+"]"));
-                                        for (var item in data) {
-                                            path = data[item];
-                                            root_path_re = new RegExp("^" + root_path, "g");
-                                            path_name = path.replace(root_path_re, '');
-
-                                            var input = $("<input>").attr("type", "checkbox").attr("name", "path").val(path);
-
-                                            // If is a directory.
-                                            if (path.match("/$") == "/" || path.match("\\$") == "\\") {
-                                                attr_class = "directory";
-                                                mime_class = "folder";
-                                                var inner = $("<a>").attr("href", "#").attr("path", path).text(path_name);
-                                            } else {
-                                                attr_class = "file";
-                                                if (path_name.split('.').length > 1) {
-                                                    mime_class = "ext_" + $(path_name.split('.')).eq(-1)[0].toLowerCase();
-                                                } else {
-                                                    mime_class = "";
-                                                }
-
-                                                var inner = $("<span>").html(path_name);
-                                            }
-
-                                            var file = $("<span>").html(inner);
-
-                                            input.change(function(){
-                                                checked = $(this).attr("checked") && "checked" || "";
-                                                $(this).parent().find('input').attr("checked", checked);
-                                            });
-                                            input.prependTo(file);
-
-                                            var li = $("<li>").addClass(attr_class).addClass(mime_class);
-                                            file.appendTo(li);
-                                            li.appendTo(ul);
-                                        }
-                                        ul.slideDown();
-                                        $(".tree a").unbind("click").click(function()
-                                        {
-                                            update_tree($(this).attr("path"));
-                                            return false;
-                                        });
-
-                                        link.find(".wait").remove();
-                                        // console.log(data);
-                                    }, "json");
-                                }
-
-                                $('#update_tree').click(function()
-                                {
-                                    // $('.tree').attr("path", "/");
-                                    update_tree('/');
-                                    return false;
-                                });
-
-                                $(".tree a").click(function()
-                                {
-                                    update_tree($(this).attr("path"));
-                                    return false;
-                                });
-                            });
-                        </script>
-
                         <p>
                             <label for="fileset_name">Nome do conjunto de arquivos:</label><br/>
                             <input type="text" name="fileset_name" id="fileset_name" class="text mid" />
