Adicionando nome para o perfil de configuracao.

--- a/nimbus/backup/templates/backup_create.html
+++ b/nimbus/backup/templates/backup_create.html
@@ -100,6 +100,10 @@
             
             <div class="novo_perfil" style="display: none; padding: 20px; background: #FFF2A7; margin-bottom: 20px">
                 <p>
+                    <label for="profile_name">Nome do perfil de configuração:</label><br/>
+                    <input type="text" class="text" name="profile.name" id="profile_name" value="" />
+                </p>
+                <p>
                     <label for="storage_id">Local de armazenamento dos arquivos:</label><br/>
                     <select class="styled" id="storage_id" name="profile.storage_id">
                         <option value=""> - Selecione - </option>
