Adicionar, listar e editar profile. Adicionei botao de executar procedimento.

--- a/nimbus/base/templates/base.html
+++ b/nimbus/base/templates/base.html
@@ -88,6 +88,7 @@
 					        <li><a href="/backup/add">Criar backup</a></li>
                             <li><a href="/computers/list">Listar computador</a></li>
                             <li><a href="/computers/add">Adicionar computador</a></li>
+                            <li><a href="/procedures/profile/list">Listar perfis de configuração</a></li>
                             <li><a href="/procedures/list">Listar procedimentos</a></li>
                             <li><a href="/storages/list">Listar Armazenamento</a></li>
                             <li><a href="/storages/add">Adicionar Armazenamento</a></li>                            
