--- a/nimbus/media/lib/css/style.css
+++ b/nimbus/media/lib/css/style.css
@@ -820,6 +820,8 @@ a:hover {
 .block form input.submit.long { width: 165px; background: url(../images/btnb.gif) top center no-repeat; }
 .block form input.submit.long:hover { background: url(../images/btnb_.gif) top center no-repeat; }
 
+.block form input.submit.longer { width: 225px; background: url(../images/btnl.gif) top center no-repeat; }
+.block form input.submit.longer:hover { background: url(../images/btnl_.gif) top center no-repeat; }
 
 /* Small blocks */
 
