--- a/nimbus/procedures/templates/procedures_list.html
+++ b/nimbus/procedures/templates/procedures_list.html
@@ -45,6 +45,9 @@
                 </div>
                 <div class="right" style="float: right; width: 600px">
                     <div style="float: right">
+                        <form action="/procedures/{{procedure.id}}/execute/" method="post" style="float: right">
+                            <input type="submit" class="submit tiny" value="Executar agora" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                        </form>
                         {% if not procedure.offsite_on %}
                         <form action="/procedures/{{procedure.id}}/activate_offsite/" method="post" style="float: right">
                             <input type="submit" class="submit tiny" value="Ativar Offsite" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
