--- a/nimbus/computers/templates/computers_view.html
+++ b/nimbus/computers/templates/computers_view.html
@@ -25,59 +25,70 @@
     <div class="block_content">
         <p><a href="/computers/add">Adicionar computador</a> • <a href="/computers/">Visualizar todos os computadores</a></p>
 
-        <div class="computers">
-            <div class="computer" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
-                <div class="left" style="float: left; width: 250px">
-                    <div class="title">
-                        <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
-                        <h3 class="name" style="margin: 0 0 -5px 0; padding: 0">{{computer.name}}</h3>
-                        <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
-                    </div>
-                    <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{computer.description}}</p>
-                    <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{computer.id}}/edit/">Editar</a> - <a href="/computers/{{computer.id}}/delete/">Remover</a></p>
+        <div class="computer {% if not computer.active %}desativado{% endif %}" style="padding: 20px; -moz-border-radius: 5px; background: #EEE; margin-bottom: 20px">
+            <div class="left" style="float: left; width: 250px">
+                <div class="title">
+                    <img src="/media/icons/computer.png" style="float: left; height: 32px; padding-right: 10px" />
+                    <h3 class="name" style="margin: 0 0 -5px 0; padding: 0"><a href="/computers/{{ computer.id }}/view">{{computer.name}}</a></h3>
+                    <small class="ip">{{computer.address}} - {{computer.operation_system|title}} - {% for g in computer.groups.all %}{{g.name}}{% endfor %}</small>
                 </div>
-
-                <div class="right" style="float: right; width: 600px">
-                    {% if not computer.procedure_set.count %}
-                        <div class="message warning">
-                            <p>Não há procedimentos neste computador.</p>
-                        </div>
-                    {% else %}
-                        <h4>ARQUIVOS PARA BACKUP</h4>
-                        
-                        <div class="files" style="padding: 10px; -moz-border-radius: 5px; background: #FFF; margin-bottom: 20px; border: 1px solid #CCC">
-                            {% for proc in computer.procedure_set.all %}
-                            <div class="file">
-                                <div class="title">
-                                    <a href="#" class="toggle" ref="fileset_detail">
-                                        <img src="/media/icons/folder.png" style="float: left; height: 32px; padding-right: 10px" />
-                                        <h4 class="name" style="margin: 0 0 -5px 0; padding: 0">{{proc.profile.fileset}}</h4>
-                                        <small class="ip">{% for file in proc.profile.fileset.files.all|slice:":3" %}{{file.path}} - {% endfor %}</small>
-                                    </a>
-                                </div>
-                                <div class="fileset_detail" style="display: none">
-                                    <br/>
-                                    Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
-                                    Perfil de configuração: <strong>{{proc.profile.name}}</strong> <small>(<a href="{% url nimbus.procedures.views.profile_edit object_id=proc.profile.id %}">editar</a>)</small><br/>
-                                    Local de armazenamento: <strong><a href="/storages/{{proc.profile.storage.id}}/view"><span title="Endereço: {{proc.profile.storage.address}} - {{proc.profile.storage.description|slice:":25"}}...">{{proc.profile.storage.name}}</span></a></strong><br/>
-                                    Agendamento: <strong>{{proc.profile.schedule}}</strong> <small>(<a href="{% url nimbus.schedules.views.edit object_id=proc.profile.schedule.id %}">editar</a>)</small><br/>
-                                    Arquivos: <small>(<a href="{% url nimbus.filesets.views.edit object_id=proc.profile.fileset.id %}">editar</a>)</small>
-                                    <ul>
-                                        {% for file in proc.profile.fileset.files.all %}
-                                        <li><strong>{{file}}</strong></li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                                <div class="clear"></div>
-                            </div>
-                            {% endfor %}
-                        </div>
-                    {% endif %}
-                </div>
-                <div class="clear"></div>
+                <p style="font-size: 10px; margin-top: 10px; line-height: 1.4em">{{computer.description}}</p>
+                <p style="font-size: 10px; margin: 0px; padding: 0; line-height: 1.4em"><a href="/computers/{{computer.id}}/edit/">Editar</a> - <a href="/computers/{{computer.id}}/delete/">Remover</a></p>
             </div>
+            <div class="right" style="float: right; width: 600px">
+                <div style="float: right">
+                    {% if not computer.active %}
+                    <form action="/computers/{{computer.id}}/activate/" method="post" style="float: right">
+                        <input type="submit" class="submit tiny" value="Ativar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                    </form>
+                    {% endif %}
+                    {% if computer.procedure_set.count %}
+                    <form action="/restore/{{computer.id}}/view/" method="post" style="float: right">
+                        <input type="submit" class="submit tiny" value="Restaurar" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                    </form>
+                    {% endif %}
+                    <form action="/backup/{{computer.id}}/add/" method="post" style="float: right">
+                        <input type="submit" class="submit tiny" value="Criar backup" style="float: right; font-size: 11px; margin-right: 0; margin-left: 5px;" />
+                    </form>
+                </div>
+                {% if not computer.procedure_set.count %}
+                    <p>Não existem procedimentos para este computador.</p>
+                {% else %}
+                    <h4 style="float: left">ARQUIVOS PARA BACKUP</h4>
+                    <div class="clear"></div>
+                    <div class="files" style="padding: 10px; -moz-border-radius: 5px; background: #FFF; margin-bottom: 20px; border: 1px solid #CCC">
+                        {% for proc in computer.procedure_set.all %}
+                        <div class="file">
+                            <div class="title">
+                                <a href="#" class="toggle" ref="fileset_detail">
+                                    <img src="/media/icons/folder.png" style="float: left; height: 32px; padding-right: 10px" />
+                                    <h4 class="name" style="margin: 0 0 -5px 0; padding: 0">{{proc.profile.fileset}}</h4>
+                                    <small class="ip">{% for file in proc.profile.fileset.files.all|slice:":3" %}{{file.path}} - {% endfor %}</small>
+                                </a>
+                            </div>
+                            <div class="fileset_detail" style="display: none">
+                                <br/>
+                                Offsite ativado? <strong>{% if proc.offsite_on %}Sim{% else %}Não{% endif %}</strong><br/>
+                                Perfil de configuração: <strong>{{proc.profile.name}}</strong> <small>(<a href="{% url nimbus.procedures.views.profile_edit object_id=proc.profile.id %}">editar</a>)</small><br/>
+                                Local de armazenamento: <strong><a href="/storages/{{proc.profile.storage.id}}/view"><span title="Endereço: {{proc.profile.storage.address}} - {{proc.profile.storage.description|slice:":25"}}...">{{proc.profile.storage.name}}</span></a></strong><br/>
+                                Agendamento: <strong>{{proc.profile.schedule}}</strong> <small>(<a href="{% url nimbus.schedules.views.edit object_id=proc.profile.schedule.id %}">editar</a>)</small><br/>
+                                Arquivos: <small>(<a href="{% url nimbus.filesets.views.edit object_id=proc.profile.fileset.id %}">editar</a>)</small>
+                                <ul>
+                                    {% for file in proc.profile.fileset.files.all %}
+                                    <li><strong>{{file}}</strong></li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="clear"></div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+            </div>
+            <div class="clear"></div>
         </div>
-        
+
+
         <div class="block-executados">
             <h3>Ocupação do backup</h3>
             <div class="" style="width: 200px; border: 1px solid green" title="72% de ocupação.">
